# glw

./: .gitignore  CMakeLists.txt  glw.hpp
examples/: CMakeLists.txt
examples/01_triangle/: CMakeLists.txt
examples/01_triangle/shaders/: basic.frag  basic.vert
examples/01_triangle/src/: main.cpp
examples/02_texture/: CMakeLists.txt
examples/02_texture/shaders/: basic.frag  basic.vert
examples/02_texture/src/: main.cpp
examples/03_compute/: CMakeLists.txt
examples/03_compute/shaders/: compute.comp
examples/03_compute/src/: main.cpp
examples/04_input/: CMakeLists.txt
examples/04_input/src/: main.cpp
examples/04_ssbo/: CMakeLists.txt
examples/04_ssbo/src/: main.cpp
examples/05_input/: CMakeLists.txt
examples/05_input/src/: main.cpp
include/glw/: debug.hpp  glw.hpp  input.hpp  keys.hpp  math.hpp  shader.hpp  ssbo.hpp  texture.hpp  types.hpp  vao.hpp  vertex.hpp
src/: debug.cpp  glw.cpp  input.cpp  math.cpp  shader.cpp  ssbo.cpp  texture.cpp  vao.cpp
tests/: Makefile  main.cpp
